--- a/scripts/reportsAtlas/template_result.html
+++ b/scripts/reportsAtlas/template_result.html
@@ -99,7 +99,7 @@ html {
     </tbody>
 </table>
 <h3 style="text-align:right;vertical-align:right; font-weight:normal">{{nowtime}}</h3>
-<h3 class="footer-heading" style="text-align:right;vertical-align:right">Contact us with email: renzhx@pcl.ac.cn</h3>
+<h3 class="footer-heading" style="text-align:right;vertical-align:right">Contact us with email: zhaijidong@tsinghua.edu.cn</h3>
 <br>
 </body>
 </html>
